--- a/src/mobileBoilerplate/style.scss
+++ b/src/mobileBoilerplate/style.scss
@@ -2,6 +2,10 @@
 // 设计稿宽度 单位 px
 $pegeWidth: 640;
 
+
+$btn-primary-color: red;
+
+
 /** 
  * 
  * 使用：
@@ -12,17 +16,9 @@ $pegeWidth: 640;
 
 
 
-
+@import 'bootstrap';
 @import 'mobile-responsive/mixin';
 
 // other import
 // @import 'style.scss'
-// 
-.main {
-  background: red;
-  background: url(img/show.jpg) no-repeat center / contain;
-
-  margin: auto;
-  width: rem(640);
-  height: rem(640);
-}
+@import './style/a';
